adicionando imagens ao site

--- a/index.html
+++ b/index.html
@@ -82,7 +82,39 @@
           </div>
         </div>
       </div>
-
+      <div class="row">
+        <div class="col">
+          <p class="fs-1">Lançamentos</p>
+          <div class="card-group">
+            <div class="card">
+              <img src="img/kit_2_bermudas_cargo_masculina_escolha_as_cores_1357_1_967d7c0cd7c7d81b45d6a5e6ec43f2f4.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/kit_2_shorts_curto_masculino_escolha_as_cores_1651_1_267fa87dacc22899b584b5ca2a352b2e.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/kit_2_calcas_cargo_masculina_sem_punho_escolha_as_cores_1793_4_592a7c63124e6f979680f86c3dc05d68.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+      <hr>
+        </div>
+      </div>
+      
       <div class="card-group">
   <div class="card">
     <img src="img/1730458750_1.webp" class="card-img-top" alt="...">
