Adicionando margem ao titulo da categoria

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <p class="display-1">Lançamentos</p>
+        <p class="display-1 titulo_categoria">Lançamentos</p>
         <hr class="categoria">
         <div class="card-group">
           <div class="card">
