--- a/index.html
+++ b/index.html
@@ -84,83 +84,92 @@
       </div>
     </nav>
   </header>
-  <main>
+  <div class="container">
 
- 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/1730413903_banner_web.webp" class="d-block w-100" alt="...">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <hr class="categoria">
-        <p class="display-1 titulo_categoria">Lançamentos</p>
-        <hr class="categoria">
-        <div class="card-group">
-          <div class="card">
-            <img src="img/kit_2_bermudas_cargo_masculina_escolha_as_cores_1357_1_967d7c0cd7c7d81b45d6a5e6ec43f2f4.webp"
-              class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Kit 2 Bermudas Cargo Masculina - (ESCOLHA AS CORES)</h5>
-              <p class="card-text"></p>
-              <p class="card-text"><small class="text-body-secondary"></small></p>
-            </div>
-          </div>
-          <div class="card">
-            <img src="img/kit_2_calcas_cargo_masculina_sem_punho_escolha_as_cores_1793_1_82b11e478bec9c3d9963adea7c5b9a82.webp"
-              class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Kit 2 Calças Cargo Masculina Sem Punho - (ESCOLHA AS CORES)</h5>
-              <p class="card-text"></p>
-              <p class="card-text"><small class="text-body-secondary"></small></p>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              src="img/kit_2_shorts_curto_masculino_escolha_as_cores_1651_1_267fa87dacc22899b584b5ca2a352b2e.webp"
-              class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Kit 2 Shorts Curto Masculino - (ESCOLHA AS CORES)</h5>
-              <p class="card-text"></p>
-              <p class="card-text"><small class="text-body-secondary"></small></p>
-            </div>
+    <main>
+
+
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/1730413903_banner_web.webp" class="d-block w-100" alt="...">
           </div>
         </div>
+      </div>
+      <hr class="categoria">
+      <p class="display-1 titulo_categoria">OFERTAS</p>
+      <hr class="categoria">
 
+      <div class="card-group">
+        <div class="card">
+          <img src="img/1730458750_1.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <p class="card-text"><small class="text-body-secondary"></small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/1730459185_2.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <p class="card-text"><small class="text-body-secondary"></small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/1730458911_3.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <p class="card-text"><small class="text-body-secondary"></small></p>
+          </div>
+        </div>
       </div>
-    </div>
+      <div class="row">
+        <div class="col">
+          <hr class="categoria">
+          <p class="display-1 titulo_categoria">Lançamentos</p>
+          <hr class="categoria">
+          <div class="card-group">
+            <div class="card">
+              <img
+                src="img/kit_2_bermudas_cargo_masculina_escolha_as_cores_1357_1_967d7c0cd7c7d81b45d6a5e6ec43f2f4.webp"
+                class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Kit 2 Bermudas Cargo Masculina - (ESCOLHA AS CORES)</h5>
+                <p class="card-text"></p>
+                <p class="card-text"><small class="text-body-secondary"></small></p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="img/kit_2_calcas_cargo_masculina_sem_punho_escolha_as_cores_1793_1_82b11e478bec9c3d9963adea7c5b9a82.webp"
+                class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Kit 2 Calças Cargo Masculina Sem Punho - (ESCOLHA AS CORES)</h5>
+                <p class="card-text"></p>
+                <p class="card-text"><small class="text-body-secondary"></small></p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/kit_2_shorts_curto_masculino_escolha_as_cores_1651_1_267fa87dacc22899b584b5ca2a352b2e.webp"
+                class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Kit 2 Shorts Curto Masculino - (ESCOLHA AS CORES)</h5>
+                <p class="card-text"></p>
+                <p class="card-text"><small class="text-body-secondary"></small></p>
+              </div>
+            </div>
+          </div>
 
-    <div class="card-group">
-      <div class="card">
-        <img src="img/1730458750_1.webp" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title"></h5>
-          <p class="card-text"></p>
-          <p class="card-text"><small class="text-body-secondary"></small></p>
         </div>
       </div>
-      <div class="card">
-        <img src="img/1730459185_2.webp" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title"></h5>
-          <p class="card-text"></p>
-          <p class="card-text"><small class="text-body-secondary"></small></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="img/1730458911_3.webp" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title"></h5>
-          <p class="card-text"></p>
-          <p class="card-text"><small class="text-body-secondary"></small></p>
-        </div>
-      </div>
-    </div>
-  </main>
-  <footer> Rodap</footer>
+
+    </main>
+    <footer> Rodap</footer>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
