--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="masculino.html" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="vertudo_masculino.html" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Masculino
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="calcas_masculinas.html">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Bermudas</a></li>
+                <li><a class="dropdown-item" href="bermudas_masculinas.html">Bermudas</a></li>
                 <li><a class="dropdown-item" href="#">Camisetas</a></li>
                 <li><a class="dropdown-item" href="#">Jaquetas</a></li>
                 <li>
