--- a/bermudas_masculinas.html
+++ b/bermudas_masculinas.html
@@ -30,7 +30,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="calcas_masculinas.html">Calças</a></li>
                 <li><a class="dropdown-item" href="bermudas_masculinas.html">Bermudas</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="camisetas_masc.html">Camisetas</a></li>
                 <li><a class="dropdown-item" href="#">Jaquetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -97,9 +97,9 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca1.webp" class="card-img-top" alt="...">
+              <img src="img/bermuda1.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Calça Sarja Masculina com Bolso Social Bege</h5>
+                <h5 class="card-title">Bermuda Jogger Cargo Masculina Preta</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -108,10 +108,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca2.webp" class="card-img-top" alt="...">
+              <img src="img/bermuda2.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                  Calça Sarja Masculina com Bolso Social Café</h5>
+                    Bermuda Jogger Cargo Masculina Bege</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -120,10 +120,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca3.webp" class="card-img-top" alt="...">
+              <img src="img/bermuda5.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                  Calça Sarja Masculina com Bolso Social Preto</h5>
+                    Bermuda Jeans Elastano Masculina Preta Ref: 03</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -135,9 +135,9 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca5.webp" class="card-img-top" alt="...">
+              <img src="img/bermuda3.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Calça Jeans Cargo Baggy CT Masculina Azul Claro</h5>
+                <h5 class="card-title">Bermuda Jeans Média Rasgada Masculina Ref: 425</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -148,9 +148,9 @@
           <div class="col">
 
             <div class="card" style="width: 18rem;">
-              <img src="img/calca6.webp" class="card-img-top" alt="...">
+              <img src="img/bermuda4.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Calça Jeans Cargo Baggy CT Masculina Azul Escuro</h5>
+                <h5 class="card-title">Bermuda Jeans Escuro Masculina Ref: 426</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -160,9 +160,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca7.webp" class="card-img-top" alt="...">
+              <img src="img/bermuda6.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Calça Jogger Cargo Sem Punho Masculina Bege</h5>
+                <h5 class="card-title">
+                    Bermuda Jeans Elastano Masculina Branco</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
