--- a/camisetas_masc.html
+++ b/camisetas_masc.html
@@ -30,7 +30,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="calcas_masculinas.html">Calças</a></li>
                 <li><a class="dropdown-item" href="bermudas_masculinas.html">Bermudas</a></li>
-                <li><a class="dropdown-item" href="camisetas_masc.html">Camisetas</a></li>
+                <li><a class="dropdown-item" href="#">Camisetas</a></li>
                 <li><a class="dropdown-item" href="#">Jaquetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -87,7 +87,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/1710175873_capa_calca_jogger.webp" class="d-block w-100" alt="...">
+          <img src="img/1710176576_capa_camiseta_e_regata (1).webp" class="d-block w-100" alt="...">
         </div>
       </div>
     </div>
@@ -97,9 +97,9 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca1.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta2.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Calça Sarja Masculina com Bolso Social Bege</h5>
+                <h5 class="card-title">Camiseta Manga Curta Básica Azul Marinho CT</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -108,10 +108,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca2.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta3.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                  Calça Sarja Masculina com Bolso Social Café</h5>
+                    Camiseta Manga Curta Básica Branca CT</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -120,10 +120,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca3.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta4.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                  Calça Sarja Masculina com Bolso Social Preto</h5>
+                    Camiseta Manga Curta Básica Café CT</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -135,9 +135,9 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca5.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta5.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Calça Jeans Cargo Baggy CT Masculina Azul Claro</h5>
+                <h5 class="card-title">Camiseta Manga Curta Básica Preta CT</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -148,9 +148,9 @@
           <div class="col">
 
             <div class="card" style="width: 18rem;">
-              <img src="img/calca6.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta6.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Calça Jeans Cargo Baggy CT Masculina Azul Escuro</h5>
+                <h5 class="card-title">Camiseta Manga Curta Básica Vinho CT</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -160,9 +160,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/calca7.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta1.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Calça Jogger Cargo Sem Punho Masculina Bege</h5>
+                <h5 class="card-title">
+                    Camiseta Manga Curta Básica Cinza Escuro CT</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
