--- a/bermudas_masculinas.html
+++ b/bermudas_masculinas.html
@@ -31,7 +31,7 @@
                 <li><a class="dropdown-item" href="calcas_masculinas.html">Calças</a></li>
                 <li><a class="dropdown-item" href="bermudas_masculinas.html">Bermudas</a></li>
                 <li><a class="dropdown-item" href="camisetas_masc.html">Camisetas</a></li>
-                <li><a class="dropdown-item" href="#">Jaquetas</a></li>
+                <li><a class="dropdown-item" href="jaqueta_masc.html">Jaquetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -134,7 +134,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card padding_card" style="width: 18rem;">
               <img src="img/bermuda3.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Bermuda Jeans Média Rasgada Masculina Ref: 425</h5>
