--- a/calcas_masculinas.html
+++ b/calcas_masculinas.html
@@ -31,7 +31,7 @@
                 <li><a class="dropdown-item" href="calcas_masculinas.html">Calças</a></li>
                 <li><a class="dropdown-item" href="bermudas_masculinas.html">Bermudas</a></li>
                 <li><a class="dropdown-item" href="camisetas_masc.html">Camisetas</a></li>
-                <li><a class="dropdown-item" href="#">Jaquetas</a></li>
+                <li><a class="dropdown-item" href="jaqueta_masc.html">Jaquetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
