--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 
       <div class="card-group">
         <div class="card">
-          <img src="img/1730458750_1.webp" class="card-img-top" alt="...">
+          <a class="navbar-brand" href="calcas_masculinas.html"><img src="img/1730458750_1.webp" style="width: 100%; height: 30ren;"></a>
+          
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
