adicionando itens masculino, feminino e infantil

--- a/calcas_fem.html
+++ b/calcas_fem.html
@@ -35,7 +35,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_fem.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -44,7 +44,7 @@
                 Feminino
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
+                <li><a class="dropdown-item" href="calcas_fem.html">Calças</a></li>
                 <li><a class="dropdown-item" href="#">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -87,7 +87,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/1710169406_capa_bermuda.webp" class="d-block w-100" alt="...">
+          <img src="img/1710180966_capa_wide_leg.webp" class="d-block w-100" alt="...">
         </div>
       </div>
     </div>
@@ -97,32 +97,33 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda1.webp" class="card-img-top" alt="...">
+              <img src="img/calca_cargo_wide_leg_feminina_caramelo_1803_1_2066a0c35ffa899072a1197c59c2c71a.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jogger Cargo Masculina Preta</h5>
-                <p class="card-text">$89,00</p>
+                <h5 class="card-title">
+                    Calça Cargo Wide Leg Feminina Caramelo</h5>
+                <p class="card-text">$119,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda2.webp" class="card-img-top" alt="...">
+              <img src="img/calca_jogger_cargo_sem_punho_unissex_grafite_1917_1_05ed0001fce1a47aa578cfcdb3a91f2c.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jogger Cargo Masculina Bege</h5>
-                <p class="card-text">$89,00</p>
+                    Calça Cargo Feminina Sem Punho Grafite</h5>
+                <p class="card-text">$99,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda5.webp" class="card-img-top" alt="...">
+              <img src="img/calca_feminina_wide_leg_branca_1517_1_ec7a4b5248b17a6c7eacb0c225a52c31.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Preta Ref: 03</h5>
-                <p class="card-text">$100,00</p>
+                    Calça Wide Leg Feminina Branca</h5>
+                <p class="card-text">$119,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -131,11 +132,11 @@
         </div>
         <div class="row">
           <div class="col">
-            <div class="card padding_card" style="width: 18rem;">
-              <img src="img/bermuda3.webp" class="card-img-top" alt="...">
+            <div class="card" style="width: 18rem;">
+              <img src="img/calca_jogger_cargo_sem_punho_unissex_azul_medio_1459_1_4f2d696884b09063483560c33fe8ee6a.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jeans Média Rasgada Masculina Ref: 425</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Jeans Feminina Azul Médio</h5>
+                <p class="card-text">$94,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -144,10 +145,10 @@
           <div class="col">
 
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda4.webp" class="card-img-top" alt="...">
+              <img src="img/calca_jogger_cargo_sem_punho_unissex_bege_claro_1339_1_978a384c145f546c1885b0596cc82dff.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jeans Escuro Masculina Ref: 426</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Feminina Bege Claro</h5>
+                <p class="card-text">$94,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -155,11 +156,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda6.webp" class="card-img-top" alt="...">
+              <img src="img/calca_jogger_cargo_sem_punho_unissex_preta_1335_1_fa51700874f083fc9fed99c2b7a6bbb1.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Branco</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Feminina Preta</h5>
+                <p class="card-text">$94,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
