--- a/calcas_infantil.html
+++ b/calcas_infantil.html
@@ -44,7 +44,7 @@
                 Feminino
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
+                <li><a class="dropdown-item" href="calcas_fem.html">Calças</a></li>
                 <li><a class="dropdown-item" href="#">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -87,7 +87,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/1710169406_capa_bermuda.webp" class="d-block w-100" alt="...">
+          <img src="img/1727800732_banner_infantil.webp" class="d-block w-100" alt="...">
         </div>
       </div>
     </div>
@@ -97,32 +97,33 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda1.webp" class="card-img-top" alt="...">
+              <img src="img/calca_jogger_infantil_masculina_bege_ct_2085_1_4a33b3aba4cd68b4bcbe11aad9f55240.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jogger Cargo Masculina Preta</h5>
-                <p class="card-text">$89,00</p>
+                <h5 class="card-title">
+                  Calça Jogger Infantil Masculina Bege CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda2.webp" class="card-img-top" alt="...">
+              <img src="img/calca_jogger_infantil_masculina_grafite_ct_2089_1_25b8ed8d775c17966b439b81b605607a.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jogger Cargo Masculina Bege</h5>
-                <p class="card-text">$89,00</p>
+                  Calça Jogger Infantil Masculina Grafite CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda5.webp" class="card-img-top" alt="...">
+              <img src="img/calca_jogger_infantil_masculina_verde_musgo_ct_2087_1_29146be7dbb9868ab9862d08ae2956c4.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Preta Ref: 03</h5>
-                <p class="card-text">$100,00</p>
+                    Calça Jogger Infantil Masculina Verde Musgo CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -131,11 +132,11 @@
         </div>
         <div class="row">
           <div class="col">
-            <div class="card padding_card" style="width: 18rem;">
-              <img src="img/bermuda3.webp" class="card-img-top" alt="...">
+            <div class="card" style="width: 18rem;">
+              <img src="img/calca_jogger_infantil_feminina_bege_ct_2091_1_0100d9448ca91b5b68aef9bb8c8bbaed.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jeans Média Rasgada Masculina Ref: 425</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Infantil Feminina Bege CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -144,10 +145,10 @@
           <div class="col">
 
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda4.webp" class="card-img-top" alt="...">
+              <img src="img/calca_jogger_infantil_feminina_grafite_ct_2093_1_ab5a97db69069040e14ba838d017bbcb.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jeans Escuro Masculina Ref: 426</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Infantil Feminina Grafite CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -155,11 +156,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda6.webp" class="card-img-top" alt="...">
+              <img src="img/calca_jogger_infantil_feminina_verde_musgo_ct_2095_1_fac9e0125d19e440f051c70eee7d35ac.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Branco</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
