--- a/camiseta_infantil.html
+++ b/camiseta_infantil.html
@@ -44,7 +44,7 @@
                 Feminino
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
+                <li><a class="dropdown-item" href="calcas_fem.html">Calças</a></li>
                 <li><a class="dropdown-item" href="#">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -87,7 +87,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/1710169406_capa_bermuda.webp" class="d-block w-100" alt="...">
+          <img src="img/1727800732_banner_infantil.webp" class="d-block w-100" alt="...">
         </div>
       </div>
     </div>
@@ -97,32 +97,33 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda1.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_infantil_ct_manga_curta_feminina_branca_2077_1_7debc93c7560b3852794b719c07844c2.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jogger Cargo Masculina Preta</h5>
-                <p class="card-text">$89,00</p>
+                <h5 class="card-title">
+                  Calça Jogger Infantil Masculina Bege CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda2.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_infantil_ct_manga_curta_feminina_cafe_2079_1_a46c69edc3300093218401b85bb338cf.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jogger Cargo Masculina Bege</h5>
-                <p class="card-text">$89,00</p>
+                  Calça Jogger Infantil Masculina Grafite CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda5.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_infantil_ct_manga_curta_feminina_cinza_claro_2081_1_612b147f440e67c293aaa31cd7c3d3ab.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Preta Ref: 03</h5>
-                <p class="card-text">$100,00</p>
+                    Calça Jogger Infantil Masculina Verde Musgo CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -131,11 +132,11 @@
         </div>
         <div class="row">
           <div class="col">
-            <div class="card padding_card" style="width: 18rem;">
-              <img src="img/bermuda3.webp" class="card-img-top" alt="...">
+            <div class="card" style="width: 18rem;">
+              <img src="img/camiseta_infantil_ct_manga_curta_feminina_preta_2075_1_d83c4d8de5311832ddf413c540dc289b.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jeans Média Rasgada Masculina Ref: 425</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Infantil Feminina Bege CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -144,10 +145,10 @@
           <div class="col">
 
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda4.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_infantil_ct_manga_curta_feminina_verde_2083_1_c1b7e1d34d153c46f9b8b0fcc5add61e.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jeans Escuro Masculina Ref: 426</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Infantil Feminina Grafite CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -155,16 +156,60 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda6.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_infantil_ct_manga_curta_masculina_branca_2065_1_1db5f1e0121ffd737bc5995b8bf34c30.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Branco</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
+                <p class="card-text">$74,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
 
           </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="img/camiseta_infantil_ct_manga_curta_masculina_cafe_2069_1_b823eeaf5cb9cc339b4e1e178f3d0645.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
+                <p class="card-text">$74,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="img/camiseta_infantil_ct_manga_curta_masculina_cinza_claro_2071_1_e53c0150020e8311d8aa874f87c85cce.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
+                <p class="card-text">$74,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="img/camiseta_infantil_ct_manga_curta_masculina_preta_2067_1_bc02cd93553f6956643880c9b5b81976.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
+                <p class="card-text">$74,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="img/camiseta_infantil_ct_manga_curta_masculina_verde_2073_1_0a6d128369822ca773fe1b11cbd20a95.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
+                <p class="card-text">$74,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+
+          </div>
+
         </div>
       </div>
     </div>
