--- a/calcas_masculinas.html
+++ b/calcas_masculinas.html
@@ -100,9 +100,8 @@
               <img src="img/calca1.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Calça Sarja Masculina com Bolso Social Bege</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">$95,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
@@ -112,9 +111,8 @@
               <div class="card-body">
                 <h5 class="card-title">
                   Calça Sarja Masculina com Bolso Social Café</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">$95,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
@@ -124,9 +122,8 @@
               <div class="card-body">
                 <h5 class="card-title">
                   Calça Sarja Masculina com Bolso Social Preto</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">$95,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
@@ -138,9 +135,8 @@
               <img src="img/calca5.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Calça Jeans Cargo Baggy CT Masculina Azul Claro</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">$100,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
 
@@ -151,9 +147,8 @@
               <img src="img/calca6.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Calça Jeans Cargo Baggy CT Masculina Azul Escuro</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">$100,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
 
@@ -163,9 +158,8 @@
               <img src="img/calca7.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Calça Jogger Cargo Sem Punho Masculina Bege</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">$100,00</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
 
