--- a/camisetas-fem.html
+++ b/camisetas-fem.html
@@ -44,7 +44,7 @@
                 Feminino
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
+                <li><a class="dropdown-item" href="calcas_fem.html">Calças</a></li>
                 <li><a class="dropdown-item" href="#">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -87,7 +87,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/1710169406_capa_bermuda.webp" class="d-block w-100" alt="...">
+          <img src="img/1730829467_capa_camiseta_oversized_2024.webp" class="d-block w-100" alt="...">
         </div>
       </div>
     </div>
@@ -97,32 +97,33 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda1.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_oversized_ct_feminino_off_white_2033_2_dc56b239368d1ce6e625002367db9628 (1).webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jogger Cargo Masculina Preta</h5>
-                <p class="card-text">$89,00</p>
+                <h5 class="card-title">
+                    Camiseta Oversized CT Feminino Off White</h5>
+                <p class="card-text">$85,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda2.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_oversized_ct_feminino_bege_escuro_2037_2_56a7aef9cf7cf8337b346f64abb70eb8.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jogger Cargo Masculina Bege</h5>
-                <p class="card-text">$89,00</p>
+                    Camiseta Oversized CT Feminino Bege Escuro</h5>
+                <p class="card-text">$85,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda5.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_oversized_ct_feminino_preta_2029_2_bc3d1631b872562bc7770b187901b112.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Preta Ref: 03</h5>
-                <p class="card-text">$100,00</p>
+                    Camiseta Oversized CT Feminino Preta</h5>
+                <p class="card-text">$85,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -131,11 +132,11 @@
         </div>
         <div class="row">
           <div class="col">
-            <div class="card padding_card" style="width: 18rem;">
-              <img src="img/bermuda3.webp" class="card-img-top" alt="...">
+            <div class="card" style="width: 18rem;">
+              <img src="img/camiseta_oversized_ct_feminino_mostarda_2140_2_dc748f6df715c53962329f6f99fcaa0e.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jeans Média Rasgada Masculina Ref: 425</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Camiseta Oversized CT Feminino Mostarda</h5>
+                <p class="card-text">$85,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -144,10 +145,11 @@
           <div class="col">
 
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda4.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_oversized_ct_feminino_verde_musgo_2041_2_c000ff178a89a3ef10bdc714d51f3eac.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Bermuda Jeans Escuro Masculina Ref: 426</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Camiseta Oversized CT Feminino Verde Musgo
+                </h5>
+                <p class="card-text">$85,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -155,11 +157,10 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="img/bermuda6.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_oversized_ct_feminino_azul_marinho_2035_2_eea20a1323f3eb25ae534d25d15fc429.webp" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Branco</h5>
-                <p class="card-text">$100,00</p>
+                <h5 class="card-title">Camiseta Oversized CT Feminino Azul Marinho</h5>
+                <p class="card-text">$85,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
