--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="masculino.html">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_masc.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -45,12 +45,12 @@
                 Feminino
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="calcas_fem.html">Calças</a></li>
+                <li><a class="dropdown-item" href="camisetas-fem.html">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_fem.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -59,16 +59,16 @@
                 Infantil
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="calcas_infantil.html">Calças</a></li>
+                <li><a class="dropdown-item" href="camiseta_infantil.html">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_masculino.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Ofertas</a>
+              <a class="nav-link active" aria-current="page" href="ofertas.html">Ofertas</a>
             </li>
             <li class="nav-item dropdown">
 
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/1730459185_2.webp" class="card-img-top" alt="...">
+          <a class="navbar-brand" href="ofertas.html"><img src="img/1730459185_2.webp" style="width: 100%; height: 30ren;"></a>
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/1730458911_3.webp" class="card-img-top" alt="...">
+          <a class="navbar-brand" href="camisetas_masc.html"><img src="img/1730458911_3.webp" style="width: 100%; height: 30ren;"></a>
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
